fix analysis explorer game actions style on small screens

--- a/public/stylesheets/analyse.css
+++ b/public/stylesheets/analyse.css
@@ -632,6 +632,12 @@ body.dark .explorer_box .black {
 .explorer_box .game_menu .menu a:hover {
   background: rgba(255,255,255,0.2);
 }
+@media (max-width: 1140px) {
+.explorer_box .game_menu {
+  font-size: 0.8em;
+  letter-spacing: 0;
+}
+}
 .explorer_box .tablebase {
   width: 100%;
 }
